--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,21 @@
 {
-    "name": "rangeslider",
-    "description": "Powerful range slider",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/genkikondo/rangeslider.git"
-    },
-    "main": [
-        "js/rangeslider.js",
-        "less/rangeslider.less"
-    ],
-    "dependencies": {
-        "jquery": "2.1.1"
-    },
-    "moduleType": [
-        "globals"
-    ],
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "license": "MIT"
+  "name": "rangeslider",
+  "version": "2.1.2",
+  "description": "Powerful range slider",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/genkikondo/rangeslider.git"
+  },
+  "main": "js/rangeslider.js",
+  "dependencies": {
+    "jquery": "2.1.1"
+  },
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "license": "MIT"
 }
